# TCGPDeckGenie

./: .env.example  .gitignore  README.md  example_opponent.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/tcgp_deck_genie/: __init__.py  __main__.py  cache.py  cli.py  deck_builder.py  gemini_client.py  missions.py  models.py  prompts.py  search.py  tcgp_client.py
tests/: conftest.py  test_cli.py  test_deck_builder.py  test_missions.py  test_models.py  test_prompts.py  test_search.py  test_tcgp_client.py
