[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcgp-deck-genie"
version = "0.1.0"
description = "A portfolio project that uses the TCGdex SDK and Google Gemini to design Pokémon TCG Pocket decks with explicit reasoning about card synergy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TCGPDeckGenie contributors" }]
keywords = ["pokemon", "tcg", "tcgp", "gemini", "deck-builder", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "tcgdex-sdk>=2.3.0",
    "google-genai>=1.0.0",
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
tcgp-deck-genie = "tcgp_deck_genie.cli:main"

[project.urls]
Homepage = "https://github.com/tcgdex/python-sdk"
Issues = "https://github.com/tcgdex/python-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
